// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commitPrice 1`] = `30000`;

exports[`commitPrice 2`] = `
Array [
  Array [
    "0xpublicKey",
    Object {
      "contract": "MagiWrapper",
    },
    "quote|base",
  ],
]
`;

exports[`createDuoWrappers 1`] = `
Object {
  "Beethoven": Object {
    "M19": Object {
      "contract": "dualClassWrapper",
    },
    "Perpetual": Object {
      "contract": "dualClassWrapper",
    },
  },
  "Mozart": Object {
    "M19": Object {
      "contract": "dualClassWrapper",
    },
    "Perpetual": Object {
      "contract": "dualClassWrapper",
    },
  },
}
`;

exports[`createEsplanadeWrapper 1`] = `
Object {
  "contract": "EsplanadeWrapper",
}
`;

exports[`createMagiWrapper 1`] = `
Object {
  "contract": "MagiWrapper",
}
`;

exports[`fetchEvent 1`] = `
Array [
  Array [
    Array [
      "BTV-PPT",
      "BTV-M19",
      "MZT-PPT",
      "MZT-M19",
      Object {
        "contract": "MagiWrapper",
      },
      Object {
        "contract": "EsplanadeWrapper",
      },
    ],
    false,
  ],
]
`;

exports[`fetchKey 1`] = `
Array [
  Array [
    "tool",
    Object {
      "contractType": "type",
      "event": "event",
      "force": false,
      "gasPrice": 1000000000,
      "live": false,
      "pair": "quote|base",
      "provider": "provider",
      "tenor": "tenor",
    },
  ],
]
`;

exports[`fetchKey 2`] = `"0xprivateKey"`;

exports[`fetchKey 3`] = `"0xpublicKey"`;

exports[`fetchKey, key not start with 0x 1`] = `
Array [
  Array [
    "tool",
    Object {
      "contractType": "type",
      "event": "event",
      "force": false,
      "gasPrice": 1000000000,
      "live": false,
      "pair": "quote|base",
      "provider": "provider",
      "tenor": "tenor",
    },
  ],
]
`;

exports[`fetchKey, key not start with 0x 2`] = `"privateKey"`;

exports[`fetchKey, key not start with 0x 3`] = `"0xpublicKey"`;

exports[`fetchPrice 1`] = `30000`;

exports[`fetchPrice 2`] = `
Array [
  Array [
    "0xpublicKey",
    Array [
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
    ],
    Object {
      "contract": "MagiWrapper",
    },
  ],
]
`;

exports[`startCustodian 1`] = `
Array [
  Array [
    "account",
    "0x59E6B3d43F762310626d2905148939973db2BBd3",
    "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
    "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
  ],
]
`;

exports[`trigger 1`] = `
Array [
  Array [
    "0xpublicKey",
    Array [
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
    ],
    "event",
  ],
]
`;
